Fix yet another batch of FnidBugs warnings